--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
       <div class="d-none d-lg-flex social-links align-items-center">
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/divya_kanaparti?igshid=MmU2YjMzNjRlOQ==" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://twitter.com/hasraa126?t=0r_hLG5TMbaVm3kOxc-QDQ&s=08" class="twitter"><i class="bi bi-twitter"></i></a> 
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> 
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
